# octoTTL

./: .gitignore  PROJECT_GUIDE.md  README.md  pyproject.toml
.OLD/cardiacLab/: README.md
.OLD/cardiacLab/arduino/ARDoric/ARCONTROL/: arcontrol.ino
.OLD/cardiacLab/arduino/ARDoric/ARLASER/: arlaser.ino
.OLD/cardiacLab/arduino/ARWave/ARCONTROL/: arcontrol.ino
.OLD/cardiacLab/arduino/ARWave/ARLASER/: arlaser.ino
.OLD/cardiacLab/arduino/ARWave/ARPY/: arpy.ino
.OLD/cardiacLab/cardiac/: __init__.py
.OLD/cardiacLab/cardiac/communication/: __init__.py  serial.py
.OLD/cardiacLab/cardiac/stats/: basic.py
.OLD/cardiacLab/cardiac/utils/: __init__.py  auxiliaryfunctions.py  cli.py  metadata.py
.OLD/cardiacLab/cardiac/webplot/: plot.py
.OLD/cardiacLab/deprecated/ARCONTROL/: LaserControl.ino
.OLD/cardiacLab/deprecated/ARCONTROL_V1/: arcontrol.ino
.OLD/cardiacLab/pipelines/: from_scratch.py  only_remote.py  pipeline_v1.py  pipeline_v2.py  pipeline_v3.py  test_arduino.py  test_center.py  test_vscode.py
.OLD/cardiacLab/pipelines/analysis/: first_analysis.py  read_test.py
rust/: Cargo.toml
rust/src/: lib.rs
src/octottl/: __init__.py
