[package]
name = "octottl"
version = "0.1.0"
edition = "2021"

[lib]
name = "octottl_rs"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
arrow = "55.0.0"
ndarray = "0.16.1"
numpy = "0.24.0"
polars = "0.46.0"
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = {version = "^0.24.1", features = ["extension-module", "abi3-py39"] }
rayon = "1.10.0"
serialport = "4.7.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
